# ha-jane-voice

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy.sh  hacs.json  jane_cli.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  claude-review.yml  notion-branch.yml  notion-merged.yml  notion-pr.yml  release.yml
addon/: Dockerfile  config.yaml  requirements.txt  run.sh
config/: config_addon.py  config_dev.py
custom_components/gemini_tts/: __init__.py  config_flow.py  const.py  manifest.json  strings.json  tts.py
custom_components/jane_conversation/: __init__.py  brain.py  (+13 more)
dashboard/: jane-voice-card.js
docs/: JANE_PRD.md  MEMORY_ARCHITECTURE.md  QA_v3.4.0.md  ROADMAP.md  TOOL_CALLING_ARCHITECTURE.md  design-speaker-identification.md  kpi_queries.sql  operator-playbook-modes.md  operator-playbook-proactive.md
scripts/: lint.sh  migrate_md_to_pg.py  schema.sql
src/: brain.py  ha_client.py  jane.py  memory.py  voice.py  web_api.py
tests/: conftest.py  test_brain.py  test_config_api_live.py  test_consolidation.py  test_consolidation_pass.py  test_conversation.py  test_correction_lifecycle.py  test_debouncer.py  test_e2e.py  test_embeddings.py  test_episodic.py  test_forget_tool.py  test_gemini_api.py  test_ha_handlers.py  test_health.py  test_household_mode.py  test_json_repair.py  test_memory.py  test_ops.py  test_policy.py  test_preference_optimizer.py  test_proactive.py  test_routine_store.py  test_soft_delete.py  test_speaker.py  test_structured_memory.py  test_tools.py  test_working_memory.py
(+53 files in other folders)
